[package]
name = "wallpaper"
version = "0.2.0"
edition = "2021"

[build]
rustflags = [
  "-C", "link-arg=mainCRTStartup",
  "-C", "link-arg=WinMainCRTStartup",
]

[dependencies]
winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "winreg", "wincon" ] }
reqwest = { version = "0.11.18", features = [ "blocking" ] }