[package]
name = "wallpaper"
version = "0.2.0"
edition = "2021"

[features]
url = [ "dep:reqwest" ]
xkcd = [ "dep:reqwest", "dep:serde_json", "dep:serde", "dep:rand" ]

[dependencies]
winapi = { version = "0.3.9", features = [ "winuser", "winreg"] }
reqwest = { version = "0.11.18", features = [ "blocking" ], optional = true }
serde_json = { version = "1.0.96", optional = true }
serde = { version = "1.0.163", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }
once_cell = { version = "1.17.1" }